.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:10:59 **** Rebuild of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'search':
..\main.c:12:7: error: subscripted value is neither array nor pointer nor vector
   if(a[i]==elem)
       ^
..\main.c:15:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
